# Vulkan-Practice

./: .gitignore  CMakeLists.txt  CMakePresets.json  Music_Vae.ipynb  README.md  Untitled0.ipynb
VulkanPractice/: CMakeLists.txt  main.cpp  render.h
VulkanPractice/shaders/: shader.frag
